--- a/music category/Most popular choice/style1.css
+++ b/music category/Most popular choice/style1.css
@@ -9,11 +9,11 @@
     --index: calc(1vw + 1vh)
 }
 
-body{
+body {
     background-color: rgb(255, 252, 248);
 }
 
-.header__main{
+.header__main {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
@@ -21,7 +21,7 @@ body{
     margin-right: calc(var(--index) * 4);
 }
 
-.header__cart{
+.header__cart {
     border: none;
     outline: none;
     background: none;
@@ -29,41 +29,48 @@ body{
     cursor: pointer;
 }
 
-.header__title{
+.header__title {
     font-size: calc(var(--index) * 3);
 
 }
 
-.header__span{
+.header__span {
     display: block;
     width: 100%;
     height: 2px;
     background-color: #9C3838;
 }
 
-.main__container{
+.main__container {
     display: flex;
     justify-content: space-between;
-    gap: 55px;
     margin: calc(var(--index) * 4) calc(var(--index) * 2.5);
 }
 
-.product__cards{
+.product__cards {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
     row-gap: 55px;
+    column-gap: 30px;
+    width: 90%;
 }
 
-.product-card__content{
+.product-card__content {
     padding: 10px;
 }
 
-.product-card__image{
+.product-card__image {
     margin-bottom: calc(var(--index) * 1);
 }
 
-.product-card__info{
+.product-card__image img {
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+}
+
+.product-card__info {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,25 +78,25 @@ body{
     gap: 15px;
 }
 
-.product-card__title{
+.product-card__title {
     font-size: 24px;
-    
+
 }
 
-.product-card__price{
+.product-card__price {
     font-size: 24px;
     font-weight: 700;
 }
 
-.product-card__buy{
+.product-card__buy {
     display: flex;
     flex-wrap: nowrap;
-    /*justify-content: space-between;*/ 
+    /*justify-content: space-between;*/
     align-items: flex-start;
     gap: 15px;
 }
 
-.product-card__cart{
+.product-card__cart {
     border: none;
     outline: none;
     background: none;
@@ -97,43 +104,44 @@ body{
     cursor: pointer;
 }
 
-.sort-by-price__container{
+.sort-by-price__container {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     gap: 50px;
-    width: 45%;
+    width: 22%;
 }
 
-.sort-by-price__price-container{
+.sort-by-price__price-container {
     display: flex;
     align-items: center;
     gap: 70px;
 }
 
-.price-container__checkbox{
+.price-container__checkbox {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
-.sort-by-price__caption{
+
+.sort-by-price__caption {
     font-size: 32px;
 }
 
-.price-container__checkbox label{
+.price-container__checkbox label {
     display: block;
     position: relative;
     cursor: pointer;
     user-select: none;
 }
 
-.price-container__checkbox input{
+.price-container__checkbox input {
     position: absolute;
     display: none;
     cursor: pointer;
 }
 
-.price-container__checkbox span{
+.price-container__checkbox span {
     position: absolute;
     top: -9px;
     left: 0;
@@ -142,30 +150,30 @@ body{
     background-color: #fff;
     border: 2px solid rgba(0, 0, 0, 0.54);
     border-radius: 2px;
-    
+
 }
 
 
-.price-container__checkbox label:hover input~span{
+.price-container__checkbox label:hover input~span {
     background-color: rgb(242, 242, 242)
 }
 
-.price-container__checkbox label input:checked~span{
+.price-container__checkbox label input:checked~span {
     background-color: #9C3838;
     border: none;
 }
 
-.price-container__checkbox span::after{
+.price-container__checkbox span::after {
     content: "";
     position: absolute;
     display: none;
 }
 
-.price-container__checkbox label input:checked~span:after{
+.price-container__checkbox label input:checked~span:after {
     display: block;
 }
 
-.price-container__checkbox label span::after{
+.price-container__checkbox label span::after {
     left: 8.5px;
     top: 0.8px;
     width: 6px;
@@ -177,9 +185,185 @@ body{
     -ms-transform: rotate(45deg);
 }
 
-.price-container__price{
+.price-container__price {
     font-size: 26px;
     display: flex;
     flex-direction: column;
     gap: 27px;
+}
+
+
+@media (max-width: 1240px) {
+
+    .product-card__image img {
+        width: 350px;
+        height: 350px;
+    }
+
+    .product__cards{
+        width: 80%;
+    }
+    
+    .main__container {
+        margin: calc(var(--index) * 4) calc(var(--index) * 1);
+    }
+
+}
+
+@media (max-width: 1024px) {
+    .product-card__image img {
+        width: 300px;
+        height: 300px;
+    }
+
+    .product__cards {
+        column-gap: 0;
+    }
+
+    .sort-by-price__container {
+        width: 25%;
+    }
+
+    .sort-by-price__price-container {
+        display: flex;
+        align-items: center;
+        gap: 50px;
+    }
+}
+
+@media (max-width: 890px) {
+    .product-card__image img {
+        width: 250px;
+        height: 250px;
+    }
+
+    .sort-by-price__price-container {
+        display: flex;
+        align-items: center;
+        gap: 35px;
+    }
+
+    .sort-by-price__caption {
+        font-size: 28px;
+    }
+
+    .price-container__price {
+        font-size: 22px;
+        gap: 24px;
+    }
+
+    .price-container__checkbox {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .price-container__checkbox span {
+        top: -9px;
+        left: 0;
+        height: 20px;
+        width: 20px;
+    
+    }
+
+    .price-container__checkbox label span::after {
+        left: 6.5px;
+        top: 0.8px;
+        width: 4.5px;
+        height: 13px;
+        border: solid white;
+        border-width: 0 3px 3px 0;
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+    }
+}
+
+@media (max-width: 740px) {
+    .product-card__info {
+        gap: 10px;
+    }
+
+    .product-card__title {
+        font-size: 18px;
+    }
+
+    .product-card__price {
+        font-size: 18px;
+    }
+
+    .product-card__cart{
+        font-size: 24px;
+    }
+
+    .product-card__image img {
+        width: 220px;
+        height: 220px;
+    }
+}
+
+@media (max-width: 655px) {
+    .product-card__image img {
+        width: 180px;
+        height: 180px;
+    }
+
+    .sort-by-price__caption {
+        font-size: 24px;
+    }
+
+    .price-container__price {
+        font-size: 20px;
+        gap: 20px;
+    }
+
+    .price-container__checkbox {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .price-container__checkbox span {
+        top: -9px;
+        left: 0;
+        height: 18px;
+        width: 18px;
+    
+    }
+
+    .price-container__checkbox label span::after {
+        left: 6px;
+        top: 0.8px;
+        width: 4px;
+        height: 11.5px;
+        border-width: 0 2.4px 2.4px 0;
+    }
+
+}
+
+@media (max-width: 590px) {
+    .product-card__image img {
+        width: 250px;
+        height: 250px;
+    }
+
+    .product__cards {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        row-gap: 55px;
+        width: min-content;
+    }
+
+    .header__title {
+        width: 60%;
+    }
+
+    .header__main {
+        align-items: end;
+    }
+
+    .header__cart{
+        font-size: 42px;
+    }
 }
