--- a/style.css
+++ b/style.css
@@ -235,52 +235,30 @@ button[class*="button"]:hover {
     font-weight: 700;
 }
 
-
-
-.span__circle {
-    display: block;
-    width: calc(var(--index) * 30);
-    height: calc(var(--index) * 30);
-    background-color: #9C3838;
-    border-radius: 50%;
-    position: absolute;
-}
-
-.address__container {
-    margin-top: calc(var(--index) * 9);
+.map__text {
     display: flex;
+    justify-content: space-between;
+    align-items: end;
+    gap: 40px;
+    flex-wrap: wrap;
+    margin: calc(var(--index) * 7) calc(var(--index) * 1)  calc(var(--index) * 3);
 }
 
-.address__text {
-    margin-top: calc(var(--index) * 4);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 60px;
-    z-index: 2;
-}
-
-.address__title {
+.map__title {
     font-size: calc(var(--index) * 3);
-    margin-left: calc(var(--index) * 9);
-    font-weight: 700;
-    text-transform: uppercase;
 }
 
-.address__list {
-    font-size: calc(var(--index) * 1.4);
-    margin-left: calc(var(--index) * 2);
+.map__caption {
+    font-size: calc(var(--index) * 1.5);
+    color: #8F8F8F;
 }
 
-.address__list ul {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
+iframe{
+    width: 100%;
 }
 
 .about-us__container {
-    margin: calc(var(--index) * 12) calc(var(--index) * 1) 0px;
+    margin: calc(var(--index) * 5) calc(var(--index) * 1) 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -434,7 +412,8 @@ button[class*="button"]:hover {
 .footer__info {
     display: flex;
     justify-content: space-around;
-    gap: 38px;
+    gap: 55px;
+    row-gap: 35px;
     flex-wrap: wrap;
     color: rgb(255, 252, 248);
     text-transform: lowercase;
@@ -504,6 +483,10 @@ li[class*="__tital"] {
         width: calc(var(--index) * 21);
         height: calc(var(--index) * 9.5);
     }
+
+    iframe{
+        height: 360px;
+    }
 }
 
 @media (min-width: 820px) and (max-width: 1000px) {
@@ -522,8 +505,6 @@ li[class*="__tital"] {
     .genre__block p {
         font-size: calc(var(--index) * 1.3);
     }
-
-
 
 }
 
@@ -550,19 +531,6 @@ li[class*="__tital"] {
 
     .genre__block p {
         font-size: calc(var(--index) * 1.3);
-    }
-
-    .address__text {
-        gap: 30px;
-    }
-
-    .address__title {
-        text-align: center;
-        margin-left: 0;
-    }
-
-    .span__circle {
-        left: -50px;
     }
 
     .main-content__text {
@@ -596,6 +564,11 @@ li[class*="__tital"] {
 
     .form__text {
         font-size: 20px;
+    }
+
+    
+    iframe{
+        height: 330px;
     }
 }
 
@@ -662,6 +635,10 @@ li[class*="__tital"] {
         font-size: 24px;
         /*пофікси*/
     }
+
+    iframe{
+        height: 300px;
+    }
 }
 
 @media (max-width: 650px) {
@@ -694,6 +671,10 @@ li[class*="__tital"] {
 
     .icon {
         font-size: 16px;
+    }
+
+    .form__main {
+        gap: 10;
     }
 }
 
@@ -765,16 +746,6 @@ li[class*="__tital"] {
         font-size: calc(var(--index) * 1.2);
     }
 
-    .address__list {
-        font-size: calc(var(--index) * 1.3);
-        margin-left: calc(var(--index) * 2.5);
-    }
-
-    .address__title {
-        font-size: calc(var(--index) * 2.4);
-        margin-left: calc(var(--index) * 1);
-    }
-
     .most-popular-choice__title {
         margin-left: calc(var(--index) * 1.5);
     }
@@ -823,6 +794,10 @@ li[class*="__tital"] {
 
     .form__container {
         padding: 30px 30px;
+    }
+
+    .form__main {
+        gap: 0;
     }
 
 }
@@ -892,18 +867,6 @@ li[class*="__tital"] {
         font-size: calc(var(--index) * 1.2);
     }
 
-    .address__list {
-        font-size: calc(var(--index) * 1.4);
-    }
-
-    .address__title {
-        font-size: calc(var(--index) * 2.8);
-        margin-left: calc(var(--index) * 2);
-        margin-right: calc(var(--index) * 2);
-        display: flex;
-        justify-content: center;
-    }
-
     .most-popular-choice__title {
         margin-left: calc(var(--index) * 1.5);
     }
@@ -911,10 +874,6 @@ li[class*="__tital"] {
     .about-us__title {
         font-size: calc(var(--index) * 2.9);
        
-    }
-
-    .form__main {
-        gap: 0;
     }
 
     .form__container{
@@ -989,12 +948,6 @@ li[class*="__tital"] {
         font-size: calc(var(--index) * 2);
     }
 
-    .address__list ul {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-    }
-
     .genre-choice__container {
         gap: 35px;
         margin: calc(var(--index) * 5) calc(var(--index) * 0.8);
@@ -1034,10 +987,28 @@ li[class*="__tital"] {
         font-size: calc(var(--index) * 2);
     }
 
-    .address__list {
-        font-size: calc(var(--index) * 1.4);
-        margin-left: calc(var(--index) * 4);
-        margin-right: calc(var(--index) * 1);
+    .map__caption {
+        font-size: calc(var(--index) * 2);
+    }
+
+    .map__text {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 20px;
+        align-items: start;
+    }
+
+    iframe{
+        height: 260px;
+    }
+
+    .about-us__title {
+        font-size: calc(var(--index) * 2.1);
+    }
+
+    .form__title {
+        font-size: calc(var(--index) * 3);
     }
 
 }
