--- a/about us block/style.css
+++ b/about us block/style.css
@@ -29,12 +29,12 @@ body {
     margin-top: -14px;
 }
 
-.main__container{
+.main__container {
     top: 70px;
     position: relative;
 }
 
-.hero__image{
+.hero__image {
     background-image: url('/img/hero-section-img.jpg');
     width: 100%;
     height: 400px;
@@ -49,66 +49,75 @@ body {
     padding: 0 calc(var(--index) * 2);
 }
 
-.image__caption{
+.image__caption {
     font-size: 82px;
     color: #fff;
     text-transform: uppercase;
     word-spacing: 14px;
 }
 
-.hero__statistic{
+.hero__statistic {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
     margin: calc(var(--index) * 1.6) calc(var(--index) * 2);
 }
 
-.statistic__title{
+.statistic__content {
+    display: flex;
+    gap: calc(var(--index) * 6);
+}
+
+.statistic__title {
     font-size: 48px;
 }
 
-.statistic__number{
+.statistic__number {
     font-size: 64px;
     color: #9C3838;
 }
 
-.statistic__description{
+.statistic__description {
     font-size: 24px;
     color: #5F5F5F;
     text-transform: lowercase;
     opacity: 0.9;
 }
 
-.statistic__sales, .statistic__customers, .statistic__shops{
+.statistic__sales,
+.statistic__customers,
+.statistic__shops {
     text-align: center;
 }
 
-.main__section-description{
+.main__section-description {
     display: flex;
     align-items: center;
     margin-top: 110px;
 }
 
-.section-description__image{
+.section-description__image {
     left: -15%;
     position: relative;
     width: 35%;
 }
 
-.section-description__image img{
+.section-description__image img {
     width: calc(var(--index) * 33);
     height: calc(var(--index) * 33);
 }
 
-.section-description__text{
+.section-description__text {
     text-align: end;
     margin-right: calc(var(--index) * 2);
     display: flex;
     flex-direction: column;
     gap: 70px;
-    
+
 }
 
-.faq{
+.faq {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -116,32 +125,33 @@ body {
     margin-top: 50px;
 }
 
-.faq__container{
+.faq__container {
     width: 70%;
 }
 
-.faq__tital{
+.faq__tital {
     font-size: 54px;
     margin-bottom: 15px;
 }
 
-.faq__caption{
+.faq__caption {
     font-size: 24px;
     color: #5F5F5F;
     text-transform: lowercase;
     margin-bottom: 15px;
 }
 
-.faq__question{
+.faq__question {
     border: 1.5px solid #000;
     padding: 15px;
     border-radius: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 40px;
 }
 
-.faq__question span{
+.faq__question span {
     display: block;
     background-color: #000;
     width: 15px;
@@ -149,7 +159,7 @@ body {
     cursor: pointer;
 }
 
-.faq__question span:first-child{
+.faq__question span:first-child {
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
@@ -157,7 +167,7 @@ body {
     -o-transform: rotate(45deg);
 }
 
-.faq__question.active span:first-child{
+.faq__question.active span:first-child {
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
@@ -165,27 +175,27 @@ body {
     -o-transform: rotate(-45deg);
 }
 
-.faq__question span:last-child{
+.faq__question span:last-child {
     width: 14px;
-    transform: rotate(-45deg)  translate(-7px, -7.5px);
+    transform: rotate(-45deg) translate(-7px, -7.5px);
 
-    -webkit-transform: rotate(-45deg)  translate(-7px, -7.5px);
-    -moz-transform: rotate(-45deg)  translate(-7px, -7.5px);
-    -ms-transform: rotate(-45deg)  translate(-7px, -7.5px);
-    -o-transform: rotate(-45deg)  translate(-7px, -7.5px);
+    -webkit-transform: rotate(-45deg) translate(-7px, -7.5px);
+    -moz-transform: rotate(-45deg) translate(-7px, -7.5px);
+    -ms-transform: rotate(-45deg) translate(-7px, -7.5px);
+    -o-transform: rotate(-45deg) translate(-7px, -7.5px);
 }
 
-.faq__question.active span:last-child{
+.faq__question.active span:last-child {
     width: 14px;
-    transform: rotate(45deg)  translate(-8px, 6px);
+    transform: rotate(45deg) translate(-8px, 6px);
 
-    -webkit-transform: rotate(45deg)  translate(-8px, 6px);
-    -moz-transform: rotate(45deg)  translate(-8px, 6px);
-    -ms-transform: rotate(45deg)  translate(-8px, 6px);
-    -o-transform: rotate(45deg)  translate(-8px, 6px);
+    -webkit-transform: rotate(45deg) translate(-8px, 6px);
+    -moz-transform: rotate(45deg) translate(-8px, 6px);
+    -ms-transform: rotate(45deg) translate(-8px, 6px);
+    -o-transform: rotate(45deg) translate(-8px, 6px);
 }
 
-.faq__answer{
+.faq__answer {
     max-height: 0;
     overflow: hidden;
     margin: 10px 15px;
@@ -193,21 +203,21 @@ body {
     font-size: 18px;
 }
 
-.faq__answer.active{
+.faq__answer.active {
     max-height: 300px;
 }
 
-.text__title{
+.text__title {
     font-size: 64px;
 }
 
-.text__caption p{
+.text__caption p {
     font-size: 24px;
     color: #5F5F5F;
     padding-bottom: 30px;
 }
 
-.main__form{
+.main__form {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -216,18 +226,18 @@ body {
     margin-top: 90px;
 }
 
-.form__title{
+.form__title {
     font-size: 54px;
     text-transform: uppercase;
 }
 
-.form__caption{
+.form__caption {
     font-size: 24px;
     color: #5F5F5F;
     text-transform: lowercase;
 }
 
-.form__container{
+.form__container {
     border: 1.8px solid #9C3838;
     border-radius: 15px;
     padding: 35px 55px;
@@ -237,7 +247,7 @@ body {
     -o-border-radius: 15px;
 }
 
-.form__input{
+.form__input {
     width: calc(var(--index) * 25);
     height: calc(var(--index) * 2.3);
     border: none;
@@ -251,17 +261,17 @@ body {
     -o-border-radius: 5px;
 }
 
-.form__input:focus{
+.form__input:focus {
     outline-color: #9C3838;
 }
 
-.form__main{
+.form__main {
     display: flex;
     flex-direction: column;
     gap: 12px;
 }
 
-.form__question{
+.form__question {
     width: calc(var(--index) * 25);
     height: calc(var(--index) * 9);
     border: none;
@@ -275,24 +285,25 @@ body {
     -o-border-radius: 5px;
 }
 
-.form__question:focus{
+.form__question:focus {
     outline-color: #9C3838;
 }
 
-.form__text{
+.form__text {
     font-size: 24px;
     color: #9C3838;
     padding-bottom: 4px;
 }
 
-.form__button-container{
+.form__button-container {
     display: flex;
     justify-content: flex-end;
 }
 
-.form__btn{
+.form__btn {
     border: none;
     background-color: #e6e3df;
+    color: #000;
     font-size: 24px;
     margin-top: 30px;
     padding: 8px 32px;
@@ -304,53 +315,452 @@ body {
     -o-border-radius: 5px;
 }
 
-.form__btn:hover{
+.form__btn:hover {
     background-color: #9C3838;
     color: #fff;
     transition: 0.2s ease-out;
 }
 
-.footer__container{ 
+.footer__container {
     margin-top: 150px;
     padding: calc(var(--index) * 0.5) calc(var(--index) * 2);
 }
 
-.footer__info{
+.footer__info {
     display: flex;
     justify-content: space-around;
+    gap: 55px;
+    row-gap: 35px;
+    flex-wrap: wrap;
     color: #000;
     text-transform: lowercase;
-   
+    margin-top: 80px;
+    padding: 0 20px;
+
 }
 
-.footer__info ul{
+.footer__info ul {
     list-style-type: none;
 }
 
-li[class*="__tital"]{
+li[class*="__tital"] {
     font-size: 22px;
     padding-bottom: 10px;
     text-transform: uppercase;
 }
 
-.catalogue, .info, .contacts{
+.catalogue,
+.info,
+.contacts {
     display: flex;
     flex-direction: column;
     gap: 8px;
 }
 
-.info__link{
+.info__link {
     text-decoration: none;
     color: #000;
 }
 
-.info__link:hover{
+.info__link:hover {
     color: #9C3838;
 }
 
-.contacts__social-media{
+.contacts__social-media {
     display: flex;
     gap: 10px;
     font-size: 24px;
     cursor: pointer;
+}
+
+.icon {
+    color: #000;
+}
+
+@media (max-width: 1280px) {
+    .statistic__content {
+        width: 100%;
+        justify-content: flex-end;
+    }
+
+    .section-description__image {
+        left: -22%;
+        position: relative;
+        width: 45%;
+    }
+
+    .section-description__image img {
+        width: calc(var(--index) * 39);
+        height: calc(var(--index) * 39);
+    }
+}
+
+@media (max-width: 1080px) {
+    .text__title {
+        font-size: calc(var(--index) * 2.8);
+    }
+
+    .text__caption p {
+        font-size: calc(var(--index) * 1.2);
+    }
+
+    .hero__image {
+        height: calc(var(--index) * 16);
+    }
+}
+
+@media (max-width: 980px) {
+    .main__container {
+        top: 40px;
+    }
+
+    .section-description__image {
+        left: -25%;
+        width: 43%;
+    }
+
+    .section-description__image img {
+        width: calc(var(--index) * 37);
+        height: calc(var(--index) * 37);
+    }
+
+    .statistic__description {
+        font-size: calc(var(--index) * 1.4);
+    }
+
+    .form__input {
+        font-size: 16px;
+        height: calc(var(--index) * 3.1);
+    }
+
+    .form__question {
+        height: calc(var(--index) * 11.5);
+    }
+}
+
+@media (max-width: 850px) {
+    .header__span {
+        margin-top: -10px;
+    }
+
+    .section-description__image {
+        left: -35%;
+        width: 43%;
+    }
+
+    .section-description__image img {
+        width: calc(var(--index) * 40);
+        height: calc(var(--index) * 40);
+    }
+
+    .faq__container {
+        width: 80%;
+    }
+
+    .form__input {
+        font-size: 16px;
+        height: calc(var(--index) * 2.8);
+    }
+
+    .form__question {
+        height: calc(var(--index) * 10.5);
+    }
+
+    .form__text {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 720px) {
+    .statistic__title {
+        font-size: calc(var(--index) * 3);
+    }
+
+    .statistic__number {
+        font-size: calc(var(--index) * 3.8);
+    }
+
+    .statistic__description {
+        font-size: calc(var(--index) * 1.2);
+    }
+
+    .section-description__image {
+        left: -40%;
+        width: 45%;
+    }
+
+    .section-description__image img {
+        width: calc(var(--index) * 37);
+        height: calc(var(--index) * 37);
+    }
+
+    .faq__container {
+        width: 85%;
+    }
+
+    .faq__tital {
+        font-size: calc(var(--index) * 3.5);
+    }
+
+    .faq__caption {
+        font-size: calc(var(--index) * 1.7);
+    }
+
+    .form__container {
+        padding: 35px 45px;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+    }
+
+    .form__title {
+        font-size: calc(var(--index) * 3.5);
+    }
+
+
+    .form__caption {
+        font-size: calc(var(--index) * 1.7);
+    }
+
+    .form__input {
+        height: calc(var(--index) * 3);
+        width: calc(var(--index) * 24);
+    }
+
+    .form__question {
+        width: calc(var(--index) * 24);
+        height: calc(var(--index) * 11.5);
+    }
+
+
+    .form__btn {
+        font-size: 18px;
+        margin-top: 18px;
+        padding: 5px 22px;
+    }
+
+    .form__container {
+        padding: 30px 30px;
+    }
+
+    .form__main {
+        gap: 0;
+    }
+}
+
+@media (max-width: 620px) {
+    .header__span {
+        margin-top: -7px;
+    }
+
+    .text__title {
+        font-size: calc(var(--index) * 2.6);
+    }
+
+    .text__caption p {
+        font-size: calc(var(--index) * 1.2);
+    }
+
+    .section-description__image {
+        left: -47%;
+        width: 40%;
+    }
+
+    .faq__question {
+        font-size: calc(var(--index) * 1);
+    }
+
+    .form__input {
+        height: calc(var(--index) * 3.5);
+        width: calc(var(--index) * 24);
+    }
+
+    .form__question {
+        width: calc(var(--index) * 24);
+        height: calc(var(--index) * 12.5);
+    }
+
+    .form__text {
+        font-size: 18px;
+    }
+
+    li[class*="__tital"] {
+        font-size: 18px;
+        padding-bottom: 10px;
+        text-transform: uppercase;
+    }
+
+    .catalogue,
+    .info,
+    .contacts {
+        gap: 4px;
+    }
+
+    .info__link {
+        font-size: 12px;
+    }
+
+    .form__btn {
+        font-size: 18px;
+        margin-top: 18px;
+        padding: 5px 22px;
+    }
+
+    .form__container {
+        padding: 30px 30px;
+    }
+
+    .form__main {
+        gap: 0;
+    }
+
+    .icon {
+        font-size: 16px;
+    }
+
+    .footer__container {
+        margin-top: 90px;
+    }
+
+}
+
+@media (max-width: 550px) {
+    .section-description__image {
+        left: -52%;
+        width: 40%;
+    }
+
+    .section-description__image img {
+        width: calc(var(--index) * 35);
+        height: calc(var(--index) * 35);
+    }
+
+    .footer__info {
+        justify-content: flex-start;
+        padding: 0 15px;
+    }
+
+}
+
+@media (max-width: 480px) {
+    .section-description__text {
+        margin-right: calc(var(--index) * 1);
+        gap: 40px;
+    }
+
+    .hero__statistic {
+        margin: calc(var(--index) * 1.6) calc(var(--index) * 1);
+    }
+
+    .form__container {
+        padding: 22px 25px;
+        border-radius: 6px;
+        -webkit-border-radius: 6px;
+        -moz-border-radius: 6px;
+        -ms-border-radius: 6px;
+        -o-border-radius: 6px;
+    }
+
+    .form__input {
+        height: calc(var(--index) * 3);
+        width: calc(var(--index) * 22);
+        font-size: 14px;
+        border-radius: 3px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        -o-border-radius: 3px;
+    }
+
+    .form__question {
+        width: calc(var(--index) * 22);
+        height: calc(var(--index) * 11);
+        font-size: 14px;
+        border-radius: 3px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        -o-border-radius: 3px;
+    }
+
+    .form__text {
+        font-size: 16px;
+    }
+
+
+    .form__btn {
+        font-size: 16px;
+        border-radius: 3px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        -o-border-radius: 3px;
+    }
+
+
+}
+
+@media (max-width: 420px) {
+    .faq__question span {
+        width: 13px;
+        height: 1.5px;
+    }
+
+    .faq__question span:first-child {
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+    }
+
+    .faq__question.active span:first-child {
+        transform: rotate(-45deg);
+        -webkit-transform: rotate(-45deg);
+        -moz-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+    }
+
+    .faq__question span:last-child {
+        width: 13px;
+        transform: rotate(-45deg) translate(-5px, -7.5px);
+        -webkit-transform: rotate(-45deg) translate(-5px, -7.5px);
+        -moz-transform: rotate(-45deg) translate(-5px, -7.5px);
+        -ms-transform: rotate(-45deg) translate(-5px, -7.5px);
+        -o-transform: rotate(-45deg) translate(-5px, -7.5px);
+    }
+
+    .faq__question.active span:last-child {
+        width: 13px;
+        transform: rotate(45deg) translate(-7px, 6px);
+        -webkit-transform: rotate(45deg) translate(-7px, 6px);
+        -moz-transform: rotate(45deg) translate(-7px, 6px);
+        -ms-transform: rotate(45deg) translate(-7px, 6px);
+        -o-transform: rotate(45deg) translate(-7px, 6px);
+    }
+
+    .section-description__image {
+        left: -58%;
+        width: 42%;
+    }
+
+    .section-description__image img {
+        width: calc(var(--index) * 33);
+        height: calc(var(--index) * 34);
+    }
+
+    .text__title{
+        font-size: calc(var(--index) * 2.4);
+    }
+
+    .faq__tital{
+        font-size: calc(var(--index) * 3);
+    }
+
+    .form__title {
+        font-size: calc(var(--index) * 3);
+    }
 }
