--- a/about us block/style.css
+++ b/about us block/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 .hero__image {
-    background-image: url('/img/hero-section-img.jpg');
+    background-image: url('./img/hero-section-img.jpg');
     width: 100%;
     height: 400px;
     background-size: cover;
